[package]
name = "adafruit-motor-shield-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
ufmt = "0.2.0"
libm = "0.2.8"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[[example]]
name = "pwm"